# EIV_IGP_jax

./: .gitignore  README.md  demo.ipynb  example.ipynb  main.py  pyproject.toml
_archive/: demo.ipynb
src/: data.py  eivigp.py  igp.py  plot.py  utils.py
