[project]
authors = [
  {name = "Rohan Gautam"},
]
dependencies = [
  "arviz>=0.21.0",
  "jax>=0.6.0",
  "matplotlib>=3.10.3",
  "numpyro>=0.18.0",
  "optax>=0.2.4",
  "pandas>=2.2.3",
]
description = "The EIV IGP Model built with JAX"
name = "eiv-igp-jax"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
